--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,6 +6,7 @@ analyzer:
     - lib/generated/intl/messages_*.dart
     - lib/src/**/*g.dart
     - lib/src/models/**/*.g.dart
+    - lib/firebase_options.dart
 
 linter:
   rules:
