--- a/packages/market_repository/pubspec.yaml
+++ b/packages/market_repository/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   market_client:
     git:
       url: https://github.com/SlayerOrnstein/market_client.git
-      ref: v1.1.1
+      ref: 2417521468a17f0dc3cf7ed5b2d4265bff15efaf
   user_settings:
     path: ../user_settings
   wfcd_client:
