--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -8,7 +8,11 @@ plugins:
   - - "@semantic-release/exec"
     - prepareCmd: "./deploy.sh ${nextRelease.version}"
   - - "@semantic-release/git"
-    - assets: ["pubspec.yaml"]
+    - assets:
+        - pubspec.yaml
       message: "chore(release): ${nextRelease.version}"
 branches:
-  - master
+  - name: master
+  - name: beta
+    channel: beta
+    prerelease: true
