ci(releases): leverage semantic-release to deploy beta and stable versions to the app/play store (#147)
Co-authored-by: Ludwig R <noreply@users.github.com>

--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -8,7 +8,14 @@ plugins:
   - - "@semantic-release/exec"
     - prepareCmd: "./deploy.sh ${nextRelease.version}"
   - - "@semantic-release/git"
-    - assets: ["pubspec.yaml"]
+    - assets:
+        - pubspec.yaml
       message: "chore(release): ${nextRelease.version}"
 branches:
-  - master
+  - name: master
+    channel: alpha
+    prerelease: alpha
+  - name: beta
+    channel: beta
+    prerelease: true
+  - name: stable
