--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,8 +67,16 @@ jobs:
 
       - name: Fastlane Google Play deploy
         uses: maierj/fastlane-action@v2.2.1
+        if: ${{ contains(github.GITHUB_REF, "beta") }}
         with:
           lane: beta
+          subdirectory: android
+
+      - name: Fastlane Google Play deploy
+        uses: maierj/fastlane-action@v2.2.1
+        if: ${{ contains(github.GITHUB_REF, "stable") }}
+        with:
+          lane: production
           subdirectory: android
 
   release-ios-appstore:
@@ -132,8 +140,16 @@ jobs:
 
       - name: App Store Deploy
         uses: maierj/fastlane-action@v2.2.1
+        if: ${{ contains(github.GITHUB_REF, "beta") }}
         with:
           lane: beta
+          subdirectory: ios
+
+      - name: App Store Deploy
+        uses: maierj/fastlane-action@v2.2.1
+        if: ${{ contains(github.GITHUB_REF, "beta") }}
+        with:
+          lane: production
           subdirectory: ios
 
   release-android-github:
