--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -4,10 +4,14 @@ plugins:
         - type: perf
           release: patch
   - "@semantic-release/release-notes-generator"
+  - "@semantic-release/github"
+  - - "@semantic-release/exec"
+    - prepareCmd: ".github/workflows/scripts/update_pubspec.sh ${nextRelease.version}"
+  - - "@semantic-release/git"
+    - assets: ["pubspec.yaml"]
+      message: "chore(release): ${nextRelease.version}"
 branches:
   - name: master
-    channel: alpha
-    prerelease: alpha
   - name: beta
     channel: beta
     prerelease: true
