ci: more release config changes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,10 @@ jobs:
         uses: cycjimmy/semantic-release-action@v3.1.1
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_AUTHOR_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
+          GIT_AUTHOR_NAME: ${{ secrets.GIT_AUTHOR_NAME }}
+          GIT_COMITTER_EMAIL: ${{ secrets.GIT_COMITTER_EMAIL }}
+          GIT_COMITTER_NAME: ${{ secrets.GIT_COMITTER_NAME }}
         with:
           extra_plugins: |
             @semantic-release/exec
