--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,14 +67,14 @@ jobs:
 
       - name: Fastlane Google Play deploy
         uses: maierj/fastlane-action@v2.2.1
-        if: ${{ contains(github.GITHUB_REF, 'beta') }}
+        if: contains(github.GITHUB_REF, 'beta')
         with:
           lane: beta
           subdirectory: android
 
       - name: Fastlane Google Play deploy
         uses: maierj/fastlane-action@v2.2.1
-        if: ${{ !contains(github.GITHUB_REF, 'beta') }}
+        if: contains(github.GITHUB_REF, 'beta') == false
         with:
           lane: production
           subdirectory: android
@@ -140,14 +140,14 @@ jobs:
 
       - name: App Store Deploy
         uses: maierj/fastlane-action@v2.2.1
-        if: ${{ contains(github.GITHUB_REF, 'beta') }}
+        if: contains(github.GITHUB_REF, 'beta')
         with:
           lane: beta
           subdirectory: ios
 
       - name: App Store Deploy
         uses: maierj/fastlane-action@v2.2.1
-        if: ${{ !contains(github.GITHUB_REF, 'beta') }}
+        if: contains(github.GITHUB_REF, 'beta') == false
         with:
           lane: production
           subdirectory: ios
