ci(release): master is now stable
beta PR will now trickle down into master

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 on:
   push:
     branches:
+      - master
       - beta
-      - stable
 jobs:
   semantic-release:
     runs-on: ubuntu-latest
