ci: run build test on beta and master

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - master
-
+      - beta
   pull_request:
     branches:
-      - master
+      - beta
 
 jobs:
   android:
