--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,12 @@ on:
   push:
     branches:
       - master
+      - beta
 
   pull_request:
     branches:
       - master
+      - beta
 
 jobs:
   test:
