ci(dependabot): set `target-branch` to beta
Package updates may be breaking if they require a refactor so it
would be best to keep them in beta

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,9 +3,11 @@ enable-beta-ecosystems: true
 updates:
   - package-ecosystem: "pub"
     directory: "/"
+    target-branch: "beta"
     schedule:
       interval: "daily"
   - package-ecosystem: github-actions
     directory: "/"
+    target-branch: "beta"
     schedule:
       interval: "daily"
