build: use dependabot to keep fastlane up-to-date

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,8 +6,21 @@ updates:
     target-branch: "beta"
     schedule:
       interval: "daily"
+
   - package-ecosystem: github-actions
     directory: "/"
+    target-branch: "beta"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "bundler"
+    directory: "/android"
+    target-branch: "beta"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "bundler"
+    directory: "/ios"
     target-branch: "beta"
     schedule:
       interval: "daily"
