--- a/packages/worldstate_repository/pubspec.yaml
+++ b/packages/worldstate_repository/pubspec.yaml
@@ -7,19 +7,18 @@ environment:
   sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
-  equatable: ^2.0.3
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  hive: 2.1.0
+  hive: ^2.2.3
   user_settings:
     path: ../user_settings
   wfcd_client:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
-      ref: v3.10.0
+      ref: v3.10.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: 0.3.0
-  very_good_analysis: 2.4.0
