--- a/packages/navis_ui/pubspec.yaml
+++ b/packages/navis_ui/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
     sdk: flutter
   flutter_web_browser: 0.17.1
   html: 0.15.0
+  wfcd_client:
+    git:
+      url: https://github.com/SlayerOrnstein/wfcd_client.git
+      ref: v3.10.1
 
 dev_dependencies:
   flutter_test:
