--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,16 +21,19 @@ jobs:
   release-android-google-play:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-java@v3
+      - name: Setup Java
+        uses: actions/setup-java@v3
         with:
           distribution: microsoft
           java-version: 11
 
-      - uses: subosito/flutter-action@v2.7.1
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2.7.1
         with:
           channel: ${{ env.FLUTTER_VERSION }}
           cache: true
@@ -84,6 +87,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install Apple certificate and provisioning profile
         env:
