--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   black_hole_flutter: 0.3.5
   bloc: 8.1.0
   cached_network_image: 3.2.2
+  collection: ^1.16.0
   equatable: 2.0.5
+  firebase_core: ^1.22.0
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.1
@@ -35,7 +37,9 @@ dependencies:
   notification_repository:
     path: packages/notification_repository
   package_info: 2.0.2
+  path_provider: ^2.0.11
   responsive_builder: 0.4.3
+  rxdart: ^0.27.5
   sentry_flutter: ^6.11.1
   sentry_logging: ^6.11.1
   shimmer: 2.0.0
@@ -55,6 +59,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: 0.3.0
+  path: ^1.8.2
   sentry_dart_plugin: 1.0.0-beta.2
   test: ^1.21.4
   very_good_analysis: ^3.1.0
