--- a/packages/user_settings/pubspec.yaml
+++ b/packages/user_settings/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
+  bloc: ^8.1.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
   hive: 2.2.3
   matomo: 1.1.0
   wfcd_client:
