--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_svg: ^1.1.5
   flutter_web_browser: 0.17.1
   hive: 2.2.3
+  hive_flutter: ^1.1.0
   hydrated_bloc: 8.1.0
   intl: 0.17.0
   market_client:
