chore: update manifest with app names

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "navis",
-    "short_name": "navis",
+    "name": "Cepahlon Navis",
+    "short_name": "Navis",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "A hub inspired by Warframe Hub.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
