--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -14,6 +14,11 @@ on:
       - beta
       - navis-web
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   android:
     runs-on: ubuntu-latest
