ci: try a different action

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -152,11 +152,8 @@ jobs:
       - name: Build web app
         run: flutter build web -t lib/main_dev.dart
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: "build/web"
-
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: build/web
