--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -149,20 +149,12 @@ jobs:
           architecture: x64 # optional, x64 or arm64
 
       - name: Build web app
-        run: |
-          flutter build web -t lib/main_dev.dart
-          tar \
-          --dereference --hard-dereference \
-          --directory build/web \
-          -cvf "$RUNNER_TEMP/artifact.tar" \
-          --exclude=.git \
-          --exclude=.github \
-          .
+        run: flutter build web -t lib/main_dev.dart
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1.0.4
         with:
-          path: ${{ runner.temp }}/artifact.tar
+          path: build/web
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
