--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -16,6 +16,7 @@ on:
 permissions:
   contents: read
   pages: write
+  deployments: write
   id-token: write
 
 jobs:
@@ -127,6 +128,9 @@ jobs:
 
   web:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -157,4 +161,5 @@ jobs:
           path: build/web
 
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v1
