ci: set base href
I don't know if this would work since not sure how GH pages sets paths

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -153,7 +153,7 @@ jobs:
           architecture: x64 # optional, x64 or arm64
 
       - name: Build web app
-        run: flutter build web -t lib/main_dev.dart
+        run: flutter build web -t lib/main_dev.dart --base-href=/navis/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1.0.4
