--- a/packages/market_repository/pubspec.yaml
+++ b/packages/market_repository/pubspec.yaml
@@ -1,6 +1,6 @@
 name: market_repository
 description: A Very Good Project created by Very Good CLI.
-version: 1.0.0+1
+version: 1.1.0
 publish_to: none
 
 environment:
