--- a/packages/user_settings/pubspec.yaml
+++ b/packages/user_settings/pubspec.yaml
@@ -11,10 +11,12 @@ dependencies:
     sdk: flutter
   hive: 2.2.3
   matomo: 1.1.0
+  notification_repository:
+    path: ../notification_repository
   wfcd_client:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
-      ref: v3.10.1
+      ref: v3.10.2
 
 dev_dependencies:
   flutter_test:
