--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,21 +10,21 @@ dependencies:
   animations: ^2.0.7
   black_hole_flutter: 0.3.5
   bloc: 8.1.0
-  cached_network_image: 3.2.2
-  collection: ^1.16.0
+  cached_network_image: 3.2.3
+  collection: 1.16.0
   equatable: 2.0.5
   feedback_sentry: ^2.3.0
-  firebase_core: ^1.22.0
+  firebase_core: 2.3.0
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.1
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^1.1.5
+  flutter_svg: 1.1.6
   flutter_web_browser: 0.17.1
   hive: 2.2.3
   hive_flutter: ^1.1.0
-  hydrated_bloc: ^9.0.0-dev.3
+  hydrated_bloc: 9.0.0
   intl: 0.17.0
   market_client:
     git:
@@ -41,9 +41,9 @@ dependencies:
   package_info: 2.0.2
   path_provider: ^2.0.11
   responsive_builder: 0.4.3
-  rxdart: ^0.27.5
-  sentry_flutter: ^6.12.2
-  sentry_logging: ^6.11.2
+  rxdart: 0.27.7
+  sentry_flutter: 6.16.1
+  sentry_logging: 6.16.1
   settings_ui: ^2.0.2
   shimmer: 2.0.0
   simple_icons: 7.10.0
@@ -58,12 +58,11 @@ dependencies:
 
 dev_dependencies:
   bloc_test: 9.1.0
-  dart_code_metrics: ^4.19.1
   flutter_test:
     sdk: flutter
   mocktail: 0.3.0
   path: ^1.8.2
-  sentry_dart_plugin: ^1.0.0-beta.3
+  sentry_dart_plugin: ^1.0.0-beta.4
   test: ^1.21.4
   very_good_analysis: ^3.1.0
 
