--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     path: packages/notification_repository
   package_info: 2.0.2
   path_provider: ^2.0.11
+  provider: ^6.0.4
   responsive_builder: 0.4.3
   rxdart: 0.27.7
   sentry_flutter: 6.16.1
@@ -52,7 +53,7 @@ dependencies:
   wfcd_client:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
-      ref: v3.11.0
+      ref: v3.11.1
   worldstate_repository:
     path: packages/worldstate_repository
 
